# tree-sitter-cython

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  dprint.json  eslint.config.mjs  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-starlark.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_cython/: __init__.py
bindings/python/tree_sitter_starlark/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/: cython.h
bindings/swift/TreeSitterCython/: cython.h
examples/: 02-foo.pyx  03-bar.pxd
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: cython.txt  expressions.txt  forfrom.txt  literals.txt  pattern_matching.txt  statements.txt
test/highlight/: cython.pyx
